--- a/utilities_admin_.html
+++ b/utilities_admin_.html
@@ -94,102 +94,93 @@
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u10" class="ax_shape">
-        <img id="u10_img" class="img " src="images/inventory/u12.png"/>
+      <!-- Unnamed (Image) -->
+      <div id="u10" class="ax_image">
+        <img id="u10_img" class="img " src="images/tools_view/u42.png"/>
         <!-- Unnamed () -->
         <div id="u11" class="text">
           <p><span/></p>
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u12" class="ax_shape">
-        <img id="u12_img" class="img " src="images/inventory/u14.png"/>
+      <!-- Unnamed (Image) -->
+      <div id="u12" class="ax_image">
+        <img id="u12_img" class="img " src="images/tools_view/u42.png"/>
         <!-- Unnamed () -->
         <div id="u13" class="text">
-          <p><span>DASHBOARD</span></p>
+          <p><span/></p>
         </div>
       </div>
 
-      <!-- Unnamed (Shape) -->
-      <div id="u14" class="ax_shape">
-        <img id="u14_img" class="img " src="images/inventory/u14.png"/>
+      <!-- Unnamed (Image) -->
+      <div id="u14" class="ax_image">
+        <img id="u14_img" class="img " src="images/tools_view/u42.png"/>
         <!-- Unnamed () -->
         <div id="u15" class="text">
-          <p><span>INVENTORY</span></p>
+          <p><span/></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
       <div id="u16" class="ax_shape">
-        <img id="u16_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u16_img" class="img " src="images/dash_board/u2.png"/>
         <!-- Unnamed () -->
         <div id="u17" class="text">
-          <p><span>FILE </span><span>MAINTENANCE</span></p>
+          <p><span/></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
       <div id="u18" class="ax_shape">
-        <img id="u18_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u18_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u19" class="text">
-          <p><span>POS</span></p>
+          <p><span>DASHBOARD</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
       <div id="u20" class="ax_shape">
-        <img id="u20_img" class="img " src="images/inventory/u16.png"/>
+        <img id="u20_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u21" class="text">
-          <p><span>UTILITIES</span></p>
+          <p><span>INVENTORY</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
       <div id="u22" class="ax_shape">
-        <img id="u22_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u22_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u23" class="text">
-          <p><span>REPORTS</span></p>
+          <p><span>FILE </span><span>MAINTENANCE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
       <div id="u24" class="ax_shape">
-        <img id="u24_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u24_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u25" class="text">
-          <p><span>BUSINESS STATISTICS</span></p>
+          <p><span>POS</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u26" class="ax_image">
-        <img id="u26_img" class="img " src="images/inventory/u34.png"/>
+      <!-- Unnamed (Shape) -->
+      <div id="u26" class="ax_shape">
+        <img id="u26_img" class="img " src="images/dash_board/u4.png"/>
         <!-- Unnamed () -->
         <div id="u27" class="text">
-          <p><span/></p>
+          <p><span>UTILITIES</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u28" class="ax_image">
-        <img id="u28_img" class="img " src="images/inventory/u34.png"/>
+      <!-- Unnamed (Shape) -->
+      <div id="u28" class="ax_shape">
+        <img id="u28_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u29" class="text">
-          <p><span/></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u30" class="ax_image">
-        <img id="u30_img" class="img " src="images/inventory/u34.png"/>
-        <!-- Unnamed () -->
-        <div id="u31" class="text">
-          <p><span/></p>
+          <p><span>REPORTS</span></p>
         </div>
       </div>
     </div>
