--- a/audit.html
+++ b/audit.html
@@ -60,28 +60,145 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u2" class="ax_shape">
-        <img id="u2_img" class="img " src="images/inventory_track_pie_charts/u4.png"/>
+        <img id="u2_img" class="img " src="images/audit/u2.png"/>
         <!-- Unnamed () -->
         <div id="u3" class="text">
+          <p><span>a</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u4" class="ax_paragraph">
+        <img id="u4_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u5" class="text">
+          <p><span>AUDIT</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u6" class="ax_shape">
+        <img id="u6_img" class="img " src="images/inventory_track_pie_charts/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u7" class="text">
           <p><span>&lt;&lt;</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u4" class="ax_shape">
-        <img id="u4_img" class="img " src="images/audit/u4.png"/>
+      <div id="u8" class="ax_shape">
+        <img id="u8_img" class="img " src="images/audit/u8.png"/>
         <!-- Unnamed () -->
-        <div id="u5" class="text">
+        <div id="u9" class="text">
           <p><span/></p>
         </div>
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u6" class="ax_paragraph">
-        <img id="u6_img" class="img " src="resources/images/transparent.gif"/>
+      <div id="u10" class="ax_paragraph">
+        <img id="u10_img" class="img " src="images/audit/u10.png"/>
         <!-- Unnamed () -->
-        <div id="u7" class="text">
-          <p><span>AUDIT</span></p>
+        <div id="u11" class="text">
+          <p><span>USERNAME : Admin01</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u12" class="ax_paragraph">
+        <img id="u12_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u13" class="text">
+          <p><span>FULL NAME : Juan Delacruz</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u14" class="ax_shape">
+        <img id="u14_img" class="img " src="images/audit/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u15" class="text">
+          <p><span>TODAY</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u16" class="ax_shape">
+        <img id="u16_img" class="img " src="images/audit/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u17" class="text">
+          <p><span>WEEK</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u18" class="ax_shape">
+        <img id="u18_img" class="img " src="images/audit/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u19" class="text">
+          <p><span>MONTH</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u20" class="ax_shape">
+        <img id="u20_img" class="img " src="images/audit/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u21" class="text">
+          <p><span>PRINT</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u22" class="ax_paragraph">
+        <img id="u22_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u23" class="text">
+          <p><span>TODAY</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u24" class="ax_shape">
+        <img id="u24_img" class="img " src="images/audit/u24.png"/>
+        <!-- Unnamed () -->
+        <div id="u25" class="text">
+          <p><span/></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u26" class="ax_paragraph">
+        <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u27" class="text">
+          <p><span>DATE : 12,11,2024</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u28" class="ax_paragraph">
+        <img id="u28_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u29" class="text">
+          <p><span>TOTAL&nbsp; 325.00</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u30" class="ax_paragraph">
+        <img id="u30_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u31" class="text">
+          <p><span>S BLUE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u32" class="ax_paragraph">
+        <img id="u32_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u33" class="text">
+          <p><span>ELBOWS</span></p>
         </div>
       </div>
     </div>
