--- a/dash_board.html
+++ b/dash_board.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>PURCHASE HISTORY</title>
+    <title>DASH BOARD</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="files/purchase_history_1/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/dash_board/styles.css" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
@@ -37,7 +37,7 @@
     <script src="resources/scripts/axure/adaptive.js"></script>
     <script src="resources/scripts/axure/tree.js"></script>
     <script src="resources/scripts/axure/init.temp.js"></script>
-    <script src="files/purchase_history_1/data.js"></script>
+    <script src="files/dash_board/data.js"></script>
     <script src="resources/scripts/axure/legacy.js"></script>
     <script src="resources/scripts/axure/viewer.js"></script>
     <script type="text/javascript">
@@ -51,10 +51,82 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u0" class="ax_shape">
-        <img id="u0_img" class="img " src="images/inventory/u0.png"/>
+        <img id="u0_img" class="img " src="images/dash_board/u0.png"/>
         <!-- Unnamed () -->
         <div id="u1" class="text">
           <p><span/></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u2" class="ax_shape">
+        <img id="u2_img" class="img " src="images/dash_board/u2.png"/>
+        <!-- Unnamed () -->
+        <div id="u3" class="text">
+          <p><span/></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u4" class="ax_shape">
+        <img id="u4_img" class="img " src="images/dash_board/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u5" class="text">
+          <p><span>DASHBOARD</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u6" class="ax_shape">
+        <img id="u6_img" class="img " src="images/dash_board/u6.png"/>
+        <!-- Unnamed () -->
+        <div id="u7" class="text">
+          <p><span>INVENTORY</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u8" class="ax_shape">
+        <img id="u8_img" class="img " src="images/dash_board/u6.png"/>
+        <!-- Unnamed () -->
+        <div id="u9" class="text">
+          <p><span>FILE </span><span>MAINTENANCE</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u10" class="ax_shape">
+        <img id="u10_img" class="img " src="images/dash_board/u6.png"/>
+        <!-- Unnamed () -->
+        <div id="u11" class="text">
+          <p><span>POS</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u12" class="ax_shape">
+        <img id="u12_img" class="img " src="images/dash_board/u6.png"/>
+        <!-- Unnamed () -->
+        <div id="u13" class="text">
+          <p><span>UTILITIES</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u14" class="ax_shape">
+        <img id="u14_img" class="img " src="images/dash_board/u6.png"/>
+        <!-- Unnamed () -->
+        <div id="u15" class="text">
+          <p><span>REPORTS</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u16" class="ax_paragraph">
+        <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
+        <!-- Unnamed () -->
+        <div id="u17" class="text">
+          <p><span>DITO VIEW NG BUSINESS STATISTICS</span></p><p><span>ILAN ANG SALES,ANO ANG MOST SALES&nbsp; SAGANTONG BUWAN</span></p><p><span>LOW STOCK,</span><span>TOTAL EARNINGS,MAGKANO NAGASTOS NILA</span></p>
         </div>
       </div>
     </div>
