--- a/inventory.html
+++ b/inventory.html
@@ -105,7 +105,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u12" class="ax_shape">
-        <img id="u12_img" class="img " src="images/inventory/u12.png"/>
+        <img id="u12_img" class="img " src="images/dash_board/u2.png"/>
         <!-- Unnamed () -->
         <div id="u13" class="text">
           <p><span/></p>
@@ -114,7 +114,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u14" class="ax_shape">
-        <img id="u14_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u14_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u15" class="text">
           <p><span>DASHBOARD</span></p>
@@ -123,7 +123,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u16" class="ax_shape">
-        <img id="u16_img" class="img " src="images/inventory/u16.png"/>
+        <img id="u16_img" class="img " src="images/dash_board/u4.png"/>
         <!-- Unnamed () -->
         <div id="u17" class="text">
           <p><span>INVENTORY</span></p>
@@ -132,7 +132,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u18" class="ax_shape">
-        <img id="u18_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u18_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u19" class="text">
           <p><span>FILE </span><span>MAINTENANCE</span></p>
@@ -141,7 +141,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u20" class="ax_shape">
-        <img id="u20_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u20_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u21" class="text">
           <p><span>POS</span></p>
@@ -150,7 +150,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u22" class="ax_shape">
-        <img id="u22_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u22_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u23" class="text">
           <p><span>UTILITIES</span></p>
@@ -159,7 +159,7 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u24" class="ax_shape">
-        <img id="u24_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u24_img" class="img " src="images/dash_board/u6.png"/>
         <!-- Unnamed () -->
         <div id="u25" class="text">
           <p><span>REPORTS</span></p>
@@ -168,10 +168,10 @@
 
       <!-- Unnamed (Shape) -->
       <div id="u26" class="ax_shape">
-        <img id="u26_img" class="img " src="images/inventory/u14.png"/>
+        <img id="u26_img" class="img " src="images/inventory/u26.png"/>
         <!-- Unnamed () -->
         <div id="u27" class="text">
-          <p><span>BUSINESS STATISTICS</span></p>
+          <p><span/></p>
         </div>
       </div>
 
@@ -185,37 +185,28 @@
       </div>
 
       <!-- Unnamed (Shape) -->
-      <div id="u30" class="ax_shape">
-        <img id="u30_img" class="img " src="images/inventory/u30.png"/>
+      <div id="u30" class="ax_paragraph">
+        <img id="u30_img" class="img " src="resources/images/transparent.gif"/>
         <!-- Unnamed () -->
         <div id="u31" class="text">
-          <p><span/></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Shape) -->
-      <div id="u32" class="ax_paragraph">
-        <img id="u32_img" class="img " src="resources/images/transparent.gif"/>
-        <!-- Unnamed () -->
-        <div id="u33" class="text">
           <p><span>INVENTORY </span></p><p><span>TRACK</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u34" class="ax_image">
-        <img id="u34_img" class="img " src="images/inventory/u34.png"/>
+      <div id="u32" class="ax_image">
+        <img id="u32_img" class="img " src="images/tools_view/u42.png"/>
         <!-- Unnamed () -->
-        <div id="u35" class="text">
+        <div id="u33" class="text">
           <p><span/></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u36" class="ax_image">
-        <img id="u36_img" class="img " src="images/inventory/u34.png"/>
+      <div id="u34" class="ax_image">
+        <img id="u34_img" class="img " src="images/tools_view/u42.png"/>
         <!-- Unnamed () -->
-        <div id="u37" class="text">
+        <div id="u35" class="text">
           <p><span/></p>
         </div>
       </div>
