--- a/tools_view.html
+++ b/tools_view.html
@@ -228,6 +228,24 @@
           <p><span>&lt;&lt;</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u40" class="ax_shape">
+        <img id="u40_img" class="img " src="images/tools_view/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u41" class="text">
+          <p><span>DASHBOARD</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u42" class="ax_image">
+        <img id="u42_img" class="img " src="images/tools_view/u42.png"/>
+        <!-- Unnamed () -->
+        <div id="u43" class="text">
+          <p><span/></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
